# aml-env

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
client/: pyproject.toml
client/aml_env_client/: __init__.py
server/: Dockerfile  aml_environment.py  app.py  data.py  models.py  pyproject.toml  requirements.txt  server.py
server/aml-env/: __init__.py  data.py  env.py  models.py
server/aml_env/: data.py  env.py  server.py
server/aml_env.egg-info/: PKG-INFO  SOURCES.txt
