[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-env"
version = "1.0.0"
description = "Anti-Money Laundering Compliance Officer OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["server"]
include = ["aml_env*"]