[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "aml-env"
version = "0.1.0"
description = "AML Compliance Officer OpenEnv environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.1",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "fastapi",
    "uvicorn"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]