[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aml-env"
version = "1.0.0"
description = "Anti-Money Laundering Compliance Officer OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openenv-core>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aml_env*"]